# synth

./: .gitignore  CMakeLists.txt  README.md  dtmf.sh  makefile  mouse.cpp  synth.cpp
doc/: Antialiasing-osc-Valimaki2007.txt  README.md
lib/: CMakeLists.txt
lib/include/: libsynth.hpp
lib/src/: BlepOscillator.cpp  ClampSound.cpp  Filter.cpp  HighFilter.cpp  LowFilter.cpp  LowfGenerator.cpp  Oscilloscope.cpp  ResoFilter.cpp  SoundGenerator.cpp  TriangleGenerator.cpp  libsynth.cpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
older_one_file_synth/: makefile
single_file_synth/: README.md.md  synth.cpp  tests.sh
tests/: colib.txt  dtmf.sh  frequencies.def  line  line.cpp  osc_tests.sh  render.cpp  test.synth  tests.sh  vrac.sh
tests/hook/: hook.cpp
